package Call

type Call struct {
	Command string
}
